# cpp_intro

./: .gitignore  README.md  main.cpp
apps/000_hello_world/: CMakeLists.txt  README.md  main.cpp
apps/001_simple_app/: CMakeLists.txt  README.md
apps/003_basics/: 0_comments.cpp  1_doxygen.cpp  2_headers_and_preprocessor_directives.cpp  2_headers_and_preprocessor_directives.h  CMakeLists.txt  Doxyfile  README.md
templates/000_minimal_cmake_config/: CMakeLists.txt
templates/002_cmake_specific_configs/: README.md  multiple_target_build.txt  set_build_directory.txt
templates/003_project_structure_v0/: CMakeLists.txt  Doxyfile.diff
